manifests/hello-go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-go
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"ingress-sample-backendconfig"}}' 
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort 
  selector:
    app: hello-go
