manifests/sorry-page-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sorry-page
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80":"ingress-sample-backendconfig"}}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  type: NodePort 
  selector:
    app: sorry-page
