manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-go-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ingress-sample-ip
    networking.gke.io/managed-certificates: ingress-sample-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: hello-go
          servicePort: 80
